--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@babel/preset-react": "^7.18.6",
     "axios": "^1.4.0",
+    "eslint-plugin-import": "^2.27.5",
+    "nanoid": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
